# rust-tauri-app

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  index.html  input.css  tailwind.config.js
.cargo/: config.toml
.github/workflows/: release.yml
base/: Cargo.toml
base/src/: err.rs
github/workflows/: release.yml
src/: app.rs  employee_list.rs  main.rs  position.rs
src-tauri/: Cargo.toml  input.css  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/locations/: .gitignore  test.geojson
src-tauri/src/: lib.rs  main.rs
style/: output.css
