
[package]
name = "test-tauri-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "*"
leptos_router = "*"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
tauri-ipc-macros = "0.1.2"
gloo-net = { version = "0.6.0", features = ["http"] }

[workspace]
members = ["src-tauri"]

[package.metadata.leptos]
index_file = "index.html"
assets_dir = "public"

[package.metadata.leptos.style]
file = "style/output.css"