[package]
name = "test-tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "test_tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-geolocation = "2"
anyhow = "1.0.98"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-blec = { path = "vendor/tauri-plugin-blec", version = "0.5.3" }
geo = "0.30.0"
geojson = "0.24.2"
